Sun, 07 Jun 2013 11:12:18 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.53 release.

   *  Fixing set_multi() so that if the server closes the connection
      it will no longer raise AttributeError.  Issue found and resolution
      reviewed by Ben Hoyt.

   *  readline() now will mark the connection dead if the read fails.
      It was just closing it before.  This is related to the set_multi()
      change but worth noting separately.  Thanks to Ben Hoyt.

   *  Discussion of the above:
      https://github.com/linsomniac/python-memcached/commit/b7054a964aed0e6d86e853e60aab09cd0183b9f6#commitcomment-3337557

Sun, 02 Jun 2013 01:08:26 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.52 release.

   *  Changing check_keys to use re.match() instead of str.translate(),
      because re.match() works with Python < 2.6.
      Found by Giovanni Di Milia.

Mon, 06 May 2013 15:29:07 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.51 release.

   *  Add a MANIFEST.in file, patch by Daniel Widerin.

Mon, 06 May 2013 07:20:21 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.50 release.

   *  Client() now takes a "check_keys" option, which defaults to True.
      If False, it disables the checking of keys to ensure they have
      acceptable size and are composed of non-control characters.
      Suggested by Ben Hoyt.

   *  Converting control character checking of keys based on performance
      testing of alternatives by Ben Hoyt.

   *  Converted unicode tests from using u'', patch from Eren Güve.

   *  Included license file (pull request by "Philippe" pombredanne).

   *  Doing a "set" after server goes away, raised AttributeError:
      'NoneType' object has no attribute 'sendall'.  Patch by Ken Lalonde

   *  incr/decr return None instead of 0 on server connection failure.
      Suggested by Ivan Virabyan

   *  Supports IPv6 connections using: "inet6:[fd00::32:19f7]:11000".
      Patch by Romain Courteaud
